@@ -3,41 +3,33 @@ package com.example;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.mockito.Mock;
+import org.mockito.Mockito;
 import org.mockito.junit.MockitoJUnitRunner;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.Assert.assertEquals;
-import static org.mockito.Mockito.*;
 
 @RunWith(MockitoJUnitRunner.class)
 public class catTest {
 
     @Mock
-    private Feline mockFeline;
+    Feline feline;
 
     @Test
     public void getSound() {
-        Cat cat = new Cat(mockFeline);
-        String expectedSound = "Мяу";
-
-        String actualSound = cat.getSound();
-
-        assertEquals(expectedSound, actualSound);
+        Cat cat = new Cat(new Feline());
+        String expectedResult = "Мяу";
+        String actualResult = cat.getSound();
+        assertEquals("Некорректный результат вызова метода", expectedResult, actualResult);
     }
 
     @Test
-    public void getFood() throws Exception {
-        Cat cat = new Cat(mockFeline);
-        List<String> expectedFood = Arrays.asList("мясо1", "мясо2");
-
-        when(mockFeline.eatMeat()).thenReturn(expectedFood);
-
-        List<String> actualFood = cat.getFood();
-
-        assertEquals(expectedFood, actualFood);
-
-        verify(mockFeline).eatMeat();
+    public void getFoodShouldReturnPredatorFood() throws Exception {
+        Cat cat = new Cat(feline);
+        Mockito.when(feline.eatMeat()).thenReturn(List.of("Животные", "Птицы", "Рыба"));
+        List<String> expectedResult = List.of("Животные", "Птицы", "Рыба");
+        List<String> actualResult = cat.getFood();
+        assertEquals("Некорректный результат вызова метода", expectedResult, actualResult);
     }
 }
